Version 0.14.0
  Added 'show events only' to BusTraffic side bar
  Added "Archive now" to LogsDialog

Version 0.13.0
  Generate internal event when receiving LAYOUT_DATA
  NodesView & EventsByNodeView uses this new event to get settings, to update visible columns
  Added copy layout function to StartupDialog
  Added beta number if non-zero to version column in Nodes View
  Added 'enableGroup' to NodesView & EventsListByNode
  Added 'enableBusTraffic' to MainLayout
  Added column settings to BusEvents, EventsView & NodeEventsView
  Merged Sven's changes
    Changed settings dialogs to dropdown menu
    Shortened a few column names

version 0.12.0
  Removed getEventIndexes, now done in server
  Removed obsolete backup websocket methods
  Added LIST_OF_BACKUPS_FOR_ALL_NODES event from server
  Added backups column to Nodes View
  Added numeric limits to add event dialog
  ProgramNodeDialog - moved actions on closed to server
  Fixed updating node & event variable dialog when MDF deleted

version 0.11.2
  Fixed missing event name & group in events by node list

version 0.11.1
  Added github repo link in SystemDialog
  expanded file info display in ProgramNodeDialog
  Added settings button to NodesView & EventsListByNode Dialogs to select certain columns to display

version 0.11.0
  Added LogsDialog to download log files from server

Version 0.10.9
  Changed RestoreNodeDialog to NodeBackupAndRestoreDialog
  added link to NodeBackupDialog in NodeBackupAndRestoreDialog
  Added upload & download to NodeBackupAndRestoreDialog
  Added support for NODE_BACKUP_SAVED message from server
  Added BusTrafficDialog to display all of the BusTrafficLog
  Added 'ALL' to BusTraffic sidebar to invoke the new BusTrafficDialog
  Removed refresh_user_list on MDF delete, now done in server (better control of when it's done)

Version 0.10.8
  Increased time after node reset in RestoreNodeDialog to reflect changes in universal firmware V4bs onwards.